--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-
-<body style="margin: 0; background-color: black;">
-    <canvas id="canvas" width="500" height="500"></canvas>
+<body>
+    <!-- <div class="banner-l">
+        <h1>Pacman Nature</h1>
+        <div>
+            <button id="pl1">1 Player</button>
+            <button id="pl2">2 Player</button>
+        </div>
+    </div> -->
+    <canvas id="canvas" width="600" height="600" ></canvas>
     <div style="display:none;">
         <img id="animation" src="./imgs/animations.gif" width="140" height="20">
         <img id="ghosts" src="./imgs/ghost.png" width="140" height="20">
     </div>
-    <script src="./js/ghost.js"></script>
-    <script src="./js/pacman.js"></script>
-    <script src="./js/game.js"></script>
 </body>
-
+<script src="./js/ghost.js"></script>
+<script src="./js/pacman.js"></script>
+<script src="./js/game.js"></script>
 </html>
